docker/docker-compose/dp-ecosystem/config/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: ingestion_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: ingestion_service
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: ingestion_service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: ingestion_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: eco-ingestion-server-1
                port_value: 50051
        - endpoint:
            address:
              socket_address:
                address: eco-ingestion-server-2
                port_value: 50051
